2006-01-09  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/polbase.cpp :
	* lib/polbase.h :

	  - The {compute,evaluate}_{constraint,update}() functions will now
	    check if the grounded identifiers satisfy the temporal constraints
	    in rlist before evaluating/generating rules.

	  - add_consttab() and and_updatetab() now contains the extra rlist
	    parameter.

	* lib/consttab.cpp :
	* lib/consttab.h :
	* lib/updatetab.cpp :
	* lib/updatetab.h :

	  - Added an rlist to these classes. The rlist contains a list of
	    temporal constraints.

	* lib/rlist.cpp :
	* lib/rlist.h :

	  - Added is_allnonground() to check whether all rels are non-ground.

	  - Added copy(), vcopy(),vreplace() and vvarlist().

	* lib/rel.cpp :
	* lib/rel.h :

	  - Added vcopy(),vreplace() and vvarlist().

	* lib/updatetab.cpp :
	* lib/updatetab.h :

	  - Removed unused replace() function.

2006-01-08  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/polbase.cpp :
	* lib/polbase.h :

	  - Added add_tc() function to add ground temporal constraints.

	* lib/rlist.cpp :
	* lib/rlist.h :

	  - Added verify() function.

	  - Added varlist() function.

	  - Fixed is_ground() function to return VLAD_OK instead of a
	    boolean value.

	  - Removed m_ground from rlist as these is no reliable way to
	    keep track of the rels.

	* lib/rel.cpp :
	* lib/rel.h :

	  - Added verify() function.

	  - Fixed is_ground() function to return VLAD_OK instead of a
	    boolean value.

	* lib/tnet.cpp :

	  - add_constraint() now checks whether the given rlist is ground
	    before doing anything.

2006-01-07  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* main/policy.y :

	  - Temporarily calls add_interval to add default interval "today".

	* lib/polbase.cpp :
	* lib/polbase.h :

	  - Removed temporary adding of "default" interval.

	  - Now uses inttab to initialise tnet.

	* lib/tnet.cpp :
	* lib/tnet.h :

	  - Removed unnecessary add_interval() and add_endpoints().
